Removed input-prepend references for search blocks

--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -67,7 +67,7 @@
         <!--Species Search-->
         <div class="search-block">
           <p class="desktop-only">{% trans "Search by Species" %}</p></a>
-          <div class="input-prepend">
+          <div class="search-field-group">
             <input type="text" data-class="search" id="species-typeahead" placeholder="American basswood"/>
             <input type="hidden" id="search-species" />
           </div>
@@ -76,7 +76,7 @@
         <!-- Location Search -->
         <div class="search-block">
           <p class="desktop-only">{% trans "Search by Location" %}</p>
-          <div class="input-prepend">
+          <div class="search-field-group">
              <input type="text" data-class="search" id="boundary-typeahead" placeholder="340 N 12th St, Philadelphia"/>
             <input type="hidden" id="boundary" />
           </div>
