Show instance name on main instance page
Helps with demos and debugging to show more than a grey button on the
main instance page.

--- a/opentreemap/treemap/templates/treemap/index.html
+++ b/opentreemap/treemap/templates/treemap/index.html
@@ -2,5 +2,6 @@
 {% load i18n %}
 
 {% block content %}
+<h1>{{ request.instance.name }}</h1>
 <a href="{% url 'map' instance_id=request.instance.pk %}" class="btn">{% trans "Explore Trees" %}</a>
 {% endblock content %}
