--- a/opentreemap/treemap/static/css/fontello.css
+++ b/opentreemap/treemap/static/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?51725894');
-  src: url('../font/fontello.eot?51725894#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?51725894') format('woff'),
-       url('../font/fontello.ttf?51725894') format('truetype'),
-       url('../font/fontello.svg?51725894#fontello') format('svg');
+  src: url('../font/fontello.eot?6538498');
+  src: url('../font/fontello.eot?6538498#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?6538498') format('woff'),
+       url('../font/fontello.ttf?6538498') format('truetype'),
+       url('../font/fontello.svg?6538498#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?51725894#fontello') format('svg');
+    src: url('../font/fontello.svg?6538498#fontello') format('svg');
   }
 }
 */
@@ -50,13 +50,13 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-home:before { content: '\e800'; } /* '' */
-.icon-star:before { content: '\e805'; } /* '' */
-.icon-star-empty:before { content: '\e804'; } /* '' */
-.icon-settings:before { content: '\e807'; } /* '' */
-.icon-edit:before { content: '\e802'; } /* '' */
-.icon-help:before { content: '\e809'; } /* '' */
-.icon-share:before { content: '\e801'; } /* '' */
-.icon-comments:before { content: '\e808'; } /* '' */
-.icon-leaf:before { content: '\e806'; } /* '' */
-.icon-user:before { content: '\e803'; } /* '' */
+.icon-home:before { content: '\e801'; } /* '' */
+.icon-star:before { content: '\e802'; } /* '' */
+.icon-star-empty:before { content: '\e803'; } /* '' */
+.icon-settings:before { content: '\e804'; } /* '' */
+.icon-edit:before { content: '\e805'; } /* '' */
+.icon-help:before { content: '\e806'; } /* '' */
+.icon-share:before { content: '\e800'; } /* '' */
+.icon-comments:before { content: '\e807'; } /* '' */
+.icon-leaf:before { content: '\e809'; } /* '' */
+.icon-user:before { content: '\e808'; } /* '' */
