--- a/opentreemap/treemap/static/css/application.css
+++ b/opentreemap/treemap/static/css/application.css
@@ -160,6 +160,10 @@ input {
   padding: 30px 0 120px; 
 }
 
+.login-signup {
+  background: #f8f8f8; 
+}
+
 .login-signup-panel {
   background-color: #fff;
   box-shadow: none;
