--- a/opentreemap/treemap/static/css/application.css
+++ b/opentreemap/treemap/static/css/application.css
@@ -13,7 +13,6 @@ h1, h2, h4, h4, h5 {
 }
 
 p {
-  font-size: 16px;
   line-height: 1.7;
 }
 
@@ -123,7 +122,7 @@ input {
 
 .subhead {
   padding: 10px;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #c2c2c2;
   font-size: 16px;
   background: #fff; 
 }
@@ -167,7 +166,7 @@ input {
 .login-signup-panel {
   background-color: #fff;
   box-shadow: none;
-  max-width: 500px;
+  width: 940px;
   margin: 0px auto; 
 }
 
@@ -418,16 +417,27 @@ footer .nav-pills > li > a:hover {
     margin-bottom: 0px;
     border-top: none;
   }
+  .sidebar .accordion-heading {
+    background: #eee;
+  }
+    .sidebar .accordion-heading a {
+      color: #000;
+      font-weight: bold;
+    }
+    .sidebar .accordion-heading a:hover {
+      text-decoration: none;
+      color: #000;
+    }
 
   .benefit-label {
     font-weight: bold;
   }
 
 span.tt-dropdown-menu {
-		margin-top: 5px;
+		margin-top: 0;
 		padding: 10px;
 		width: 199px;
-		font-size: 13px;
+		font-size: 13px !important
     border: 1px solid #c2c2c2;
     background: #fff;
 		-webkit-border-radius: 3px;
@@ -438,7 +448,7 @@ span.tt-dropdown-menu {
 		box-shadow:         0px 0px 5px rgba(0, 3, 0, 0.3);
 }
 .tt-suggestion p {
-	padding: 3px 7px;
+	padding: 0px 7px;
 }
 	.tt-suggestion p:hover {
 		background-color: #eee;
@@ -446,7 +456,3 @@ span.tt-dropdown-menu {
 		-moz-border-radius:		 3px;
 		border-radius:				 3px;
 }
-
-
-
-
