--- a/opentreemap/treemap/static/css/fontello.css
+++ b/opentreemap/treemap/static/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?6538498');
-  src: url('../font/fontello.eot?6538498#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?6538498') format('woff'),
-       url('../font/fontello.ttf?6538498') format('truetype'),
-       url('../font/fontello.svg?6538498#fontello') format('svg');
+  src: url('../font/fontello.eot?27288800');
+  src: url('../font/fontello.eot?27288800#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?27288800') format('woff'),
+       url('../font/fontello.ttf?27288800') format('truetype'),
+       url('../font/fontello.svg?27288800#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?6538498#fontello') format('svg');
+    src: url('../font/fontello.svg?27288800#fontello') format('svg');
   }
 }
 */
@@ -58,5 +58,7 @@
 .icon-help:before { content: '\e806'; } /* '' */
 .icon-share:before { content: '\e800'; } /* '' */
 .icon-comments:before { content: '\e807'; } /* '' */
+.icon-down:before { content: '\e80b'; } /* '' */
+.icon-right:before { content: '\e80a'; } /* '' */
 .icon-leaf:before { content: '\e809'; } /* '' */
 .icon-user:before { content: '\e808'; } /* '' */
