Fix user page title
The page title was incorrect because username is no longer in the
top level of the context. It is now nested under user.

--- a/opentreemap/treemap/templates/treemap/user.html
+++ b/opentreemap/treemap/templates/treemap/user.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block page_title %} | {{ username }}{% endblock %}
+{% block page_title %} | {{ user.username }}{% endblock %}
 
 {% block subhead %}
 {% comment %} The subhead is not shown on the profile page {% endcomment %}
