Fixed a bad merge issue and a typo on the map template

--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -31,7 +31,7 @@
   <div id="map" class="map"> </div>
   <div class="sidebar">
     <div class="accordion" id="map-info">
-      <div classs="accordion-group">
+      <div class="accordion-group">
         <div class="accordion-heading">
           <a class="accordion-toggle" data-toggle="collapse" data-parent="#map-info" href="#treeDetails">Tree Details <span class="arrow pull-right"><i class="icon-right"></i></span></a>
         </div>
