--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -1,6 +1,6 @@
 {% extends "instance_base.html" %}
 {% load i18n %}
-{% load audit_extras %}
+{% load auth_extras %}
 
 {% block page_title %} | {% trans "Planting Site" %} {{plot.pk}}{% endblock %}
 
