--- a/opentreemap/treemap/templates/treemap/plot_accordian.html
+++ b/opentreemap/treemap/templates/treemap/plot_accordian.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-{% load audit_extras %}
+{% load auth_extras %}
 
 {% usercanread plot.current_tree "species" as species %}
 <span class="plot-label">{{ species.common_name }}</span>
