--- a/opentreemap/treemap/templates/treemap/user.html
+++ b/opentreemap/treemap/templates/treemap/user.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load audit_extras %}
+{% load auth_extras %}
 
 {% block page_title %} | {{ user.username }}{% endblock %}
 
