Updated from master and fixed merge conflict

--- a/opentreemap/treemap/templates/treemap/recent_user_edits.html
+++ b/opentreemap/treemap/templates/treemap/recent_user_edits.html
@@ -1,5 +1,6 @@
 {% load i18n %}
-<table id="recent-user-edits">
+
+<table id="recent-user-edits" class="table table-bordered">
     <thead>
         <tr>
             <th>{% trans "Action" %}</th>
@@ -60,4 +61,4 @@
             {% endif %}
         </td>
     </tfoot>
-<table>
+</table>
