Fix recent edits paging on profile
I removed a key div by accident when I merged the prototype markup.

--- a/opentreemap/treemap/templates/treemap/user.html
+++ b/opentreemap/treemap/templates/treemap/user.html
@@ -63,7 +63,9 @@
         <ul class="chunk">
             <li class="chunk-label">{% trans "Recently Added and Edited Trees" %}</li>
             <li class="chunk-content extra">
+                <div id="recent-user-edits-container">
                 {% include 'treemap/recent_user_edits.html' %}
+                </div>
             </li>
         </ul>
     </div>
