--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -8,6 +8,7 @@
 {% endblock head_extra %}
 
 {% block scripts %}
+<script src="http://maps.google.com/maps/api/js?v=3&sensor=false"></script>
 <script>
 (function(require) {
     var $ = require("jquery"),
