Reference subtemplates correctly

--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -32,13 +32,13 @@
   <div id="map" class="map"> </div>
   <div class="sidebar">
     <div id="sidebar-browse-trees">
-      {% include "map-browse-trees.html" %}
+      {% include "treemap/map-browse-trees.html" %}
     </div>
     <div id="sidebar-add-tree">
-      {% include "map-add-tree.html" %}
+      {% include "treemap/map-add-tree.html" %}
     </div>
     <div id="sidebar-edit-tree-details">
-      {% include "map-edit-tree-details.html" %}
+      {% include "treemap/map-edit-tree-details.html" %}
     </div>
   </div>
 </div>
