--- a/opentreemap/treemap/static/css/application.css
+++ b/opentreemap/treemap/static/css/application.css
@@ -22,7 +22,7 @@ input {
   font-size: 13px !important;
 }
 
-.btn, 
+.btn,
 .btn-group .btn, {
   font-size: 14px;
 }
@@ -40,11 +40,11 @@ input {
 
 .navbar .brand {
   margin-left: 15px;
-  padding: 10px 20px 10px 0; 
+  padding: 10px 20px 10px 0;
 }
 
 .brand img {
-  max-width: 20px; 
+  max-width: 20px;
 }
 
 .navbar-static-top .container,
@@ -52,25 +52,25 @@ input {
 .navbar-fixed-bottom .container {
   left: 0;
   right: 0;
-  width: auto; 
+  width: auto;
 }
 
 .container-fixedwidth {
-	width: 970px;
-	margin: 0 auto;
+        width: 970px;
+        margin: 0 auto;
 }
-	.container-fixedwidth .nav {
-		margin: 0 -15px;
-	}
-	.container-fixedwidth .nav.pull-right {
-		margin-right: -15px;
-	}
-	.container-fixedwidth .right {
-		float: right;
-	}
-	.container-fixedwidth .left {
-		float: left;
-	}
+        .container-fixedwidth .nav {
+                margin: 0 -15px;
+        }
+        .container-fixedwidth .nav.pull-right {
+                margin-right: -15px;
+        }
+        .container-fixedwidth .right {
+                float: right;
+        }
+        .container-fixedwidth .left {
+                float: left;
+        }
 
 
 /* Logo and Search -------------------- */
@@ -80,7 +80,7 @@ input {
   padding: 15px;
   height: 96px;
   border-bottom: 1px solid #eee;
-  background: #fff; 
+  background: #fff;
 }
 
 .search-block {
@@ -88,7 +88,7 @@ input {
   border: 1px solid #eee;
   border-radius: 3px;
   float: left;
-  margin-left: 10px; 
+  margin-left: 10px;
 }
   .search-block .dropdown-menu {
     width: 257px;
@@ -101,37 +101,37 @@ input {
     }
 
 .logo {
-  float: left; 
+  float: left;
   margin-top: 15px;
 }
 
 .logo img {
-  max-width: 200px; 
+  max-width: 200px;
 }
 
 .search-options {
   float: right;
-  margin-left: 20px; 
+  margin-left: 20px;
 }
 
 .search-submit-btn {
   margin-bottom: 7px;
   width: 149px;
-  padding: 14px 0; 
+  padding: 14px 0;
 }
 
 .search-block-wrapper {
   right: 190px;
-  position: absolute; 
+  position: absolute;
 }
 
 .mobile-only {
-  display: none !important; 
+  display: none !important;
 }
 
 .mobile-only .btn {
   float: right;
-  margin-bottom: 10px; 
+  margin-bottom: 10px;
 }
 
 
@@ -141,20 +141,20 @@ input {
   padding: 10px;
   border-bottom: 1px solid #c2c2c2;
   font-size: 16px;
-  background: #fff; 
+  background: #fff;
 }
 
 .subhead span {
-  font-weight: bold; 
+  font-weight: bold;
 }
 
 .subhead .exportBtn {
-  margin-left: 10px; 
+  margin-left: 10px;
 }
 
 .subhead .addBtn {
   float: right;
-  margin-top: -3px; 
+  margin-top: -3px;
 }
 
 
@@ -163,32 +163,32 @@ input {
 .additional-searches {
   padding: 8px;
   border-bottom: 1px solid #eee;
-  width: 100%; 
+  width: 100%;
 }
 
 .stewardship {
-  right: 0; 
+  right: 0;
 }
 
 /* Main Content ----------------------- */
 
 .content {
-  padding: 30px 0 120px; 
+  padding: 30px 0 120px;
 }
 
 .login-signup {
-  background: #f8f8f8; 
+  background: #f8f8f8;
 }
 
 .login-signup-panel {
   background-color: #fff;
   box-shadow: none;
   width: 940px;
-  margin: 0px auto; 
+  margin: 0px auto;
 }
 
 .have-account {
-  font-size: 14px; 
+  font-size: 14px;
 }
 
 .signup-option {
@@ -197,15 +197,15 @@ input {
   border: none;
   background-color: #777;
   color: #fff;
-  margin-top: 15px; 
+  margin-top: 15px;
 }
 
 .signup-option p {
-  margin-bottom: 0; 
+  margin-bottom: 0;
 }
 
 .signup-option a {
-  margin-left: 20px; 
+  margin-left: 20px;
 }
 
 .profile-photo-upload {
@@ -213,7 +213,7 @@ input {
   border: 1px solid #eee;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
-  border-radius: 3px; 
+  border-radius: 3px;
 }
 
 
@@ -225,17 +225,17 @@ input {
 
 .tree-details h1,
 .tree-details h2 {
-  line-height: 19px; 
+  line-height: 19px;
 }
 
 .tree-details h1 {
-  font-size: 24px; 
+  font-size: 24px;
 }
 
 .tree-details h2 {
   font-size: 20px;
   font-weight: 300;
-  color: #777; 
+  color: #777;
 }
 
 .tree-details h3 {
@@ -254,7 +254,7 @@ input {
   padding-bottom: 120px;
   border-right: 1px solid #eee;
   float: left;
-  margin-right: 15px; 
+  margin-right: 15px;
 }
   .tree-details .left h4 {
     margin-top: 0;
@@ -267,11 +267,11 @@ input {
   }
 
 .tree-details .left .add-photos {
-  margin-top: 10px; 
+  margin-top: 10px;
 }
 
 .tree-details .left .add-favorite {
-  width: 235px; 
+  width: 235px;
 }
 
 .tree-details .center {
@@ -316,31 +316,31 @@ footer {
   background: #000;
   width: 100%;
   font-size: 12px;
-  height: 35px; 
+  height: 35px;
 }
 
 footer .nav {
-  margin-bottom: 0; 
+  margin-bottom: 0;
 }
 
 .partners {
   margin-top: 7px;
   margin-right: 15px;
-  color: #777; 
+  color: #777;
 }
 
 .partners:hover {
   color: #fff;
-  text-decoration: none; 
+  text-decoration: none;
 }
 
 footer .nav-pills > li > a {
-  color: #777; 
+  color: #777;
 }
 
 footer .nav-pills > li > a:hover {
   background: none;
-  color: #fff; 
+  color: #fff;
 }
 
 
@@ -404,8 +404,13 @@ footer .nav-pills > li > a:hover {
       color: #000;
     }
 
-      
+
 /* Map -------------------------------- */
+
+.create_instance_map {
+    width: 100%;
+    height: 500px;
+}
 
 .map {
   left: 0;
@@ -451,79 +456,79 @@ footer .nav-pills > li > a:hover {
   }
 
 span.tt-dropdown-menu {
-		margin-top: 0;
-		padding: 10px;
-		width: 199px;
-		font-size: 13px !important
+                margin-top: 0;
+                padding: 10px;
+                width: 199px;
+                font-size: 13px !important
     border: 1px solid #c2c2c2;
     background: #fff;
-		-webkit-border-radius: 3px;
-		-moz-border-radius:		 3px;
-		border-radius:				 3px;
-		-webkit-box-shadow: 0px 0px 5px rgba(0, 3, 0, 0.3);
-		-moz-box-shadow:    0px 0px 5px rgba(0, 3, 0, 0.3);
-		box-shadow:         0px 0px 5px rgba(0, 3, 0, 0.3);
+                -webkit-border-radius: 3px;
+                -moz-border-radius:              3px;
+                border-radius:                           3px;
+                -webkit-box-shadow: 0px 0px 5px rgba(0, 3, 0, 0.3);
+                -moz-box-shadow:    0px 0px 5px rgba(0, 3, 0, 0.3);
+                box-shadow:         0px 0px 5px rgba(0, 3, 0, 0.3);
 }
 .tt-suggestion p {
-	padding: 0px 7px;
+        padding: 0px 7px;
 }
-	.tt-suggestion p:hover {
-		background-color: #eee;
-		-webkit-border-radius: 3px;
-		-moz-border-radius:		 3px;
-		border-radius:				 3px;
+        .tt-suggestion p:hover {
+                background-color: #eee;
+                -webkit-border-radius: 3px;
+                -moz-border-radius:              3px;
+                border-radius:                           3px;
 }
 
 
 /* User Profile ----------------------- */
 
 .profile {
-	margin-top: 50px !important;
+        margin-top: 50px !important;
 }
-	.profile .left,
-	.profile .right {
-		padding: 8px 15px;
-	}
-	.profile .left {
-		width: 261px;
-	}
-	.profile .right {
-		width: 648px;
-		border-left: 1px solid #eee;
-	}
-	.quick-info {
-		text-align: right;
-	}
-		.quick-info h1 {
-			line-height: 14px;
-			margin-top: 0;
-		}
-		.quick-info p {
-			color: #c2c2c2;
-		}
-		.quick-info ul {
-			padding: 0;
-			margin: 0;
-			list-style-type: none;
-		}
-		.quick-info li {
-			display: inline-block;
-			height: 100px;
-			padding-left: 50px;
-			vertical-align: middle;
-		}
-	.profile .chunk {
-		list-style: none;
-		padding: 5px 0 15px;
-		margin: 0;
-	}
-		.profile .chunk .extra {
-			padding-top: 10px;
-		}
-		.chunk-label {
-			font-weight: bold;
-		}
+        .profile .left,
+        .profile .right {
+                padding: 8px 15px;
+        }
+        .profile .left {
+                width: 261px;
+        }
+        .profile .right {
+                width: 648px;
+                border-left: 1px solid #eee;
+        }
+        .quick-info {
+                text-align: right;
+        }
+                .quick-info h1 {
+                        line-height: 14px;
+                        margin-top: 0;
+                }
+                .quick-info p {
+                        color: #c2c2c2;
+                }
+                .quick-info ul {
+                        padding: 0;
+                        margin: 0;
+                        list-style-type: none;
+                }
+                .quick-info li {
+                        display: inline-block;
+                        height: 100px;
+                        padding-left: 50px;
+                        vertical-align: middle;
+                }
+        .profile .chunk {
+                list-style: none;
+                padding: 5px 0 15px;
+                margin: 0;
+        }
+                .profile .chunk .extra {
+                        padding-top: 10px;
+                }
+                .chunk-label {
+                        font-weight: bold;
+                }
 
 .user-photo {
-	max-width: 85px;
+        max-width: 85px;
 }
