--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -7,3 +7,74 @@
 <li><a href="{% url 'map' instance_id=request.instance.pk %}">{% trans "Explore Trees" %}</a></li>
 <li><a href="javascript:;">{% trans "Add a Tree" %}</a></li>
 {% endblock instancetopnav %}
+
+{% block subhead %}
+<div class="subhead">
+  <div style="display: inline;" id="tree-and-planting-site-counts">
+    <!-- This is what the counts will look like -->
+    <!--
+        <span id="tree-count">4567</span> trees, <span id="planting-site-count">10,683</span> planting sites
+        -->
+  </div>
+  <a href="javascript:;" class="btn btn-mini exportBtn"><i class="icon-share"></i> Export Search Results</a>
+  <a href="javascript:;" class="btn addBtn">Add a Tree</a>
+</div>
+{% endblock subhead %}
+
+{% block search %}
+<div class="search-block-wrapper">
+  <!--Species Search-->
+  <div class="search-block">
+    <p class="desktop-only">{% trans "Search by Species" %}</p></a>
+<div class="search-field-group">
+  <input type="text" data-class="search" id="species-typeahead" placeholder="American basswood"/>
+  <input type="hidden" id="search-species" />
+</div>
+</div>
+
+<!-- Location Search -->
+<div class="search-block">
+  <p class="desktop-only">{% trans "Search by Location" %}</p>
+  <div class="search-field-group">
+    <input type="text" data-class="search" id="boundary-typeahead" placeholder="340 N 12th St, Philadelphia"/>
+    <input type="hidden" id="boundary" />
+  </div>
+</div>
+</div> <!-- end search block wrapper -->
+{% endblock search %}
+{% block searchoptions %}
+<div class="search-options">
+  <a id="perform-search" class="btn btn-primary search-submit-btn">{% trans "Search" %}</a>
+  <br>
+  <div class="btn-group">
+    <button class="btn">{% trans "Advanced" %}</button>
+    <button id="search-reset" class="btn">{% trans "Reset" %}</button>
+  </div>
+</div>
+{% endblock searchoptions %}
+
+{% block scripts %}
+<script type="text/javascript">
+    (function(require) {
+        var $ = require("jquery"),
+        app = require("app");
+
+        $(function(){
+            app.init(otm.settings);
+        })
+    })(require);
+</script>
+{% endblock scripts %}
+
+{% block endbody %}
+{% verbatim %}
+<script id="species-element-template" type="text/x-mustache-template">
+  <p>{{common_name}}</p>
+  <p>{{scientific_name}}</p>
+</script>
+<script id="boundary-element-template" type="text/x-mustache-template">
+  <p>{{name}}</p>
+  <p>{{category}}</p>
+</script>
+{% endverbatim %}
+{% endblock endbody %}
