Restore mistakenly-deleted block in base.html

--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -73,6 +73,8 @@
     </div> <!-- end header -->
     {% endblock header %}
 
+    {% block subhead %}
+    {% endblock subhead %}
 
     {% block content %}
     {% endblock content %}
