--- a/opentreemap/treemap/templates/treemap/plot_field.html
+++ b/opentreemap/treemap/templates/treemap/plot_field.html
@@ -3,17 +3,17 @@
     <td>{{ field.label }}</td>
     <td data-field="{{ field.identifier }}"
         data-class="display"
-        data-value="{{ field.value }}">
-        {{ field.display_value }}
+        data-value="{{ field.value|default_if_none:"" }}">
+        {{ field.display_value|default_if_none:"" }}
     </td>
     {% if field.is_editable %}
       <td data-field="{{ field.identifier }}"
           data-class="edit"
-          data-value="{{ field.value }}"
+          data-value="{{ field.value|default_if_none:"" }}"
           style="display: none;">
       {% if field.data_type == 'choice' %}
         <select name="{{ field.identifier }}"
-                value="{{ field.value }}"
+                value="{{ field.value|default_if_none:"" }}"
                 style="display: none;" />
             {% for option in field.options %}
                 <option value="{{ option }}">
@@ -24,7 +24,7 @@
       {% else %}
         <input name="{{ field.identifier }}"
                type="text"
-               value="{{ field.value }}"/>
+               value="{{ field.value|default_if_none:"" }}"/>
       {% endif %}
       </td>
       <td data-field="{{ field.identifier }}"
