Add tree (and plot)
* "Add Tree" button activates addTreeMode
* User must click the map to set the initial tree position (soon they will instead enter an address or click a geolocate button)
* User must then drag the tree to desired position
* Then the tree fields are enabled for editing
* In the end I did not use "inlineEditForm.js" because I have only edit fields (not display fields)

In field.html:
* Use template filter default_if_none so empty fields display as empty, not "None"
* Include "data-type" attribute so we know what type of value we're collecting

We update the map when adding a tree:
* Endpoint returns new geoRevHash
* If geoRevHash has changed, JS updates layer URLs and redraws
* Also clean up some whitespace in modeManagerForMapPage.js

Misc:
* "clickedLatLonStream" now lives only in browseTreesMode (the other modes don't need it)

--- a/opentreemap/treemap/templates/treemap/field.html
+++ b/opentreemap/treemap/templates/treemap/field.html
@@ -6,7 +6,7 @@
         <li class="chunk-content"
             data-field="{{ field.identifier }}"
             data-class="display"
-            data-value="{{ field.value }}">
+            data-value="{{ field.value|default_if_none:""}}">
             {{ field.display_value }}
         </li>
         {% if field.is_editable %}
@@ -14,10 +14,11 @@
                 data-field="{{ field.identifier }}"
                 data-class="edit"
                 data-value="{{ field.value }}"
+                data-type="{{ field.data_type }}"
                 style="display: none;">
             {% if field.data_type == 'choice' %}
                 <select name="{{ field.identifier }}"
-                        value="{{ field.value }}"
+                        value="{{ field.value|default_if_none:"" }}"
                         style="display: none;" />
                     {% for option in field.options %}
                         <option value="{{ option }}">
@@ -28,7 +29,7 @@
             {% else %}
                 <input name="{{ field.identifier }}"
                        type="text"
-                       value="{{ field.value }}"/>
+                       value="{{ field.value|default_if_none:"" }}"/>
             {% endif %}
             </li>
             <li class="chunk-content text-error"
