--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -34,10 +34,10 @@
     <div id="sidebar-browse-trees">
       {% include "treemap/map-browse-trees.html" %}
     </div>
-    <div id="sidebar-add-tree">
+    <div id="sidebar-add-tree" style="display:none">
       {% include "treemap/map-add-tree.html" %}
     </div>
-    <div id="sidebar-edit-tree-details">
+    <div id="sidebar-edit-tree-details" style="display:none">
       {% include "treemap/map-edit-tree-details.html" %}
     </div>
   </div>
