Move mustache templates above script block so they are available in "init"

--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -66,7 +66,7 @@
 </script>
 {% endblock scripts %}
 
-{% block endbody %}
+{% block templates %}
 {% verbatim %}
 <script id="species-element-template" type="text/x-mustache-template">
   <p>{{common_name}}</p>
@@ -77,4 +77,4 @@
   <p>{{category}}</p>
 </script>
 {% endverbatim %}
-{% endblock endbody %}
+{% endblock templates %}
